Implement Google Scholar import and UI improvements
- Add Google Scholar profile import functionality
  - Create scholar_scraper.py utility for scraping Google Scholar profiles
  - Integrate scraper into profile creation endpoint
  - Support both manual and Google Scholar profile creation methods
  - Store scraped scholar data in database

- Upgrade SearcherAgent to Gemini 2.5 Pro
  - Change Research Selected Ideas agent to use gemini-2.5-pro
  - Keep ProfilerAgent and ReaderAgent on gemini-2.5-flash for speed

- Update UI bullet icons in Summary and Methodology sections
  - Replace dash bullets with small round dots
  - Use dark green color (#065f46) for bullet dots
  - Improve visual consistency with flexbox layout

- Add dependencies: scholarly and beautifulsoup4 for Google Scholar scraping

--- a/ui_iterations/ui_6.html
+++ b/ui_iterations/ui_6.html
@@ -1436,23 +1436,29 @@
             console.log('Matched User Topics:', data.matched_user_topics);
             console.log('===================================');
 
-            // Summary - display as bullet points with dash prefix
+            // Summary - display as bullet points with round dot
             const summaryDiv = document.getElementById('paper-summary');
             const summaryItems = data.summary || [];
             if (summaryItems.length > 0) {
                 summaryDiv.innerHTML = summaryItems.map(item =>
-                    `<div style="margin-bottom: 8px;">– ${item}</div>`
+                    `<div style="margin-bottom: 8px; display: flex; align-items: flex-start;">
+                        <span style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background-color: #065f46; margin-right: 12px; margin-top: 6px; flex-shrink: 0;"></span>
+                        <span style="flex: 1;">${item}</span>
+                    </div>`
                 ).join('');
             } else {
                 summaryDiv.textContent = 'No summary available';
             }
 
-            // Methodology - display as bullet points with dash prefix
+            // Methodology - display as bullet points with round dot
             const methodologyDiv = document.getElementById('paper-methodology');
             const methodologyItems = data.methodology || [];
             if (methodologyItems.length > 0) {
                 methodologyDiv.innerHTML = methodologyItems.map(item =>
-                    `<div style="margin-bottom: 8px;">– ${item}</div>`
+                    `<div style="margin-bottom: 8px; display: flex; align-items: flex-start;">
+                        <span style="display: inline-block; width: 6px; height: 6px; border-radius: 50%; background-color: #065f46; margin-right: 12px; margin-top: 6px; flex-shrink: 0;"></span>
+                        <span style="flex: 1;">${item}</span>
+                    </div>`
                 ).join('');
             } else {
                 methodologyDiv.textContent = 'No methodology information available';
