Set ui_6.html as main page and fix image path
- Update Flask root route to serve ui_6.html as main page
- Fix background image path to use absolute path for ui_iterations directory
- Ensure all assets load correctly when served from root route

--- a/ui_iterations/ui_6.html
+++ b/ui_iterations/ui_6.html
@@ -58,7 +58,7 @@
             left: 0;
             right: 0;
             height: 200%;
-            background-image: url('trailhead_img.png');
+            background-image: url('/ui_iterations/trailhead_img.png');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
